// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button block should be displayed as an block element 1`] = `
<button
  class="group items-center relative mt-auto shadow-2xl inline-flex font-display justify-center font-medium transition-colors select-none bg-blue-600 text-white py-2 px-4 text-base w-full hover:bg-blue-700 focus:ring-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2"
  type="button"
>
  <span
    class=""
  >
    Hello
  </span>
</button>
`;

exports[`Button block should have the correct padding when lg 1`] = `
<button
  class="group items-center relative mt-auto shadow-2xl inline-flex font-display justify-center font-medium transition-colors select-none bg-blue-600 text-white py-4 px-6 text-lg w-full hover:bg-blue-700 focus:ring-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2"
  type="button"
>
  <span
    class=""
  >
    Hello
  </span>
</button>
`;

exports[`Button block should have the correct padding when md 1`] = `
<button
  class="group items-center relative mt-auto shadow-2xl inline-flex font-display justify-center font-medium transition-colors select-none bg-blue-600 text-white py-2 px-4 text-base w-full hover:bg-blue-700 focus:ring-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2"
  type="button"
>
  <span
    class=""
  >
    Hello
  </span>
</button>
`;

exports[`Button block should have the correct padding when sm 1`] = `
<button
  class="group items-center relative mt-auto shadow-2xl inline-flex font-display justify-center font-medium transition-colors select-none bg-blue-600 text-white py-0 px-2 text-sm w-full hover:bg-blue-700 focus:ring-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2"
  type="button"
>
  <span
    class=""
  >
    Hello
  </span>
</button>
`;

exports[`Button block should not be displayed as a block element 1`] = `
<button
  class="group items-center relative mt-auto shadow-2xl inline-flex font-display justify-center font-medium transition-colors select-none bg-blue-600 text-white py-2 px-4 text-base hover:bg-blue-700 focus:ring-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2"
  type="button"
>
  <span
    class=""
  >
    Hello
  </span>
</button>
`;

exports[`Button block should not be displayed as a block element by default 1`] = `
<button
  class="group items-center relative mt-auto shadow-2xl inline-flex font-display justify-center font-medium transition-colors select-none bg-blue-600 text-white py-2 px-4 text-base hover:bg-blue-700 focus:ring-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2"
  type="button"
>
  <span
    class=""
  >
    Hello
  </span>
</button>
`;

exports[`Button loading should render correctly when loading 1`] = `
<button
  class="group items-center relative mt-auto shadow-2xl inline-flex font-display justify-center font-medium transition-colors select-none bg-blue-600 text-white py-2 px-4 text-base cursor-not-allowed bg-opacity-75 hover:bg-opacity-75"
  type="button"
>
  <svg
    class="animate-spin absolute top-2/4 left-2/4 w-5 h-5 -mt-2.5 -ml-2.5"
    fill="none"
    viewBox="0 0 24 24"
  >
    <circle
      class="opacity-25"
      cx="12"
      cy="12"
      r="10"
      stroke="currentColor"
      stroke-width="4"
    />
    <path
      class="opacity-50"
      d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
      fill="currentColor"
    />
  </svg>
  <span
    class="invisible"
  >
    Hello
  </span>
</button>
`;

exports[`Button size should render when size is lg 1`] = `
<button
  class="group items-center relative mt-auto shadow-2xl inline-flex font-display justify-center font-medium transition-colors select-none bg-blue-600 text-white py-4 px-6 text-lg hover:bg-blue-700 focus:ring-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2"
  type="button"
>
  <span
    class=""
  >
    Hello
  </span>
</button>
`;

exports[`Button size should render when size is md 1`] = `
<button
  class="group items-center relative mt-auto shadow-2xl inline-flex font-display justify-center font-medium transition-colors select-none bg-blue-600 text-white py-2 px-4 text-base hover:bg-blue-700 focus:ring-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2"
  type="button"
>
  <span
    class=""
  >
    Hello
  </span>
</button>
`;

exports[`Button size should render when size is sm 1`] = `
<button
  class="group items-center relative mt-auto shadow-2xl inline-flex font-display justify-center font-medium transition-colors select-none bg-blue-600 text-white py-0 px-2 text-sm hover:bg-blue-700 focus:ring-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2"
  type="button"
>
  <span
    class=""
  >
    Hello
  </span>
</button>
`;

exports[`Button theme should have the correct danger styles 1`] = `
<button
  class="group items-center relative mt-auto shadow-2xl inline-flex font-display justify-center font-medium transition-colors select-none bg-red-600 text-white py-2 px-4 text-base hover:bg-red-700 focus:ring-red-500 focus:outline-none focus:ring-2 focus:ring-offset-2"
  type="button"
>
  <span
    class=""
  >
    Hello
  </span>
</button>
`;

exports[`Button theme should have the correct primary styles 1`] = `
<button
  class="group items-center relative mt-auto shadow-2xl inline-flex font-display justify-center font-medium transition-colors select-none bg-blue-600 text-white py-2 px-4 text-base hover:bg-blue-700 focus:ring-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2"
  type="button"
>
  <span
    class=""
  >
    Hello
  </span>
</button>
`;

exports[`Button theme should have the correct secondary styles 1`] = `
<button
  class="group items-center relative mt-auto shadow-2xl inline-flex font-display justify-center font-medium transition-colors select-none bg-gray-100 hover:bg-gray-300 focus:ring-gray-500 text-gray-600 py-2 px-4 text-base hover:bg-gray-700 focus:ring-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2"
  type="button"
>
  <span
    class=""
  >
    Hello
  </span>
</button>
`;

exports[`Button theme should have the correct success styles 1`] = `
<button
  class="group items-center relative mt-auto shadow-2xl inline-flex font-display justify-center font-medium transition-colors select-none bg-green-600 text-white py-2 px-4 text-base hover:bg-green-700 focus:ring-green-500 focus:outline-none focus:ring-2 focus:ring-offset-2"
  type="button"
>
  <span
    class=""
  >
    Hello
  </span>
</button>
`;

exports[`Button theme should have the correct warning styles 1`] = `
<button
  class="group items-center relative mt-auto shadow-2xl inline-flex font-display justify-center font-medium transition-colors select-none bg-yellow-600 text-white py-2 px-4 text-base hover:bg-yellow-700 focus:ring-yellow-500 focus:outline-none focus:ring-2 focus:ring-offset-2"
  type="button"
>
  <span
    class=""
  >
    Hello
  </span>
</button>
`;
